--- a/Udacity-Arcade-Game-master/index.html
+++ b/Udacity-Arcade-Game-master/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
-</head>
+    <!-- Custom font link -->
+    <link href="https://fonts.googleapis.com/css?family=Orbitron:500" rel="stylesheet">
+    <!-- jQuery CDM -->
+    
+</head> 
 <body>
 	<h1>Classic Arcade Game</h1>
 	<h2>Your Score is: <span id="playerScore"></span></h2>
